# ConnectIO-RAD

./: .coverage  .eslintrc.json  .gitignore  .importlinter  .mcp.json  .pre-commit-config.yaml  .release-please-manifest.json  ARCHITECTURE.md  BACKEND_CONSOLIDATION_IMPLEMENTATION_PLAN.md  BACKEND_CONSOLIDATION_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION_EXECUTION_PLAN.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  REPO_CONSOLIDATION_OPPORTUNITY_MAP.md  SECURITY.md  TODO.md  eslint.config.mjs  graph.json  migrate_poh.py  migrate_wh360.py  nx.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  release-please-config.json  tsconfig.base.json
apps/connectedquality/backend/: main.py  project.json  pyproject.toml
apps/connectedquality/backend/connectedquality_backend/: db.py  main.py  manifest.py
apps/connectedquality/backend/routers/: alarms.py  envmon.py  me_router.py
apps/connectedquality/backend/tests/: test_lab_application.py  test_main.py  test_router_imports.py
apps/connectedquality/backend/user_preferences/: router_me.py
apps/envmon/backend/: main.py  project.json  pyproject.toml
apps/envmon/backend/envmon_backend/: main.py  manifest.py
apps/envmon/backend/inspection_analysis/: router.py
apps/envmon/backend/routers/: coordinates.py  floors.py  heatmap.py  lots.py  plant_geo.py  plants.py  trends.py
apps/envmon/backend/schemas/: em.py
apps/envmon/backend/spatial_config/: router.py
apps/envmon/backend/tests/: conftest.py  test_architecture_boundaries.py  test_coordinates_dal.py  test_geometry_domain.py  test_inspection_domain.py  test_layout_publish.py  test_layout_validation.py  test_lots_dal.py  test_main.py  test_plant_dal_in_clause.py  test_routers.py  test_spatial_application_queries.py  test_status_derivation.py  test_trends_dal.py  test_zone_domain.py
apps/envmon/backend/utils/: db.py  em_config.py
apps/platform/backend/: main.py  project.json  pyproject.toml  utils.py
apps/platform/backend/routes/: badges.py  manifest.py  session.py
apps/platform/backend/tests/: test_badges.py  test_dashboards.py  test_main.py  test_manifest.py  test_session.py  test_utils.py
apps/processorderhistory/backend/: db.py  genie_client.py  main.py  project.json  pyproject.toml
apps/processorderhistory/backend/dal/: adherence_analytics_dal.py  day_view_dal.py  downtime_analytics_dal.py  equipment_insights2_dal.py  equipment_insights_dal.py  oee_analytics_dal.py  order_detail_dal.py  orders_dal.py  planning_dal.py  pours_analytics_dal.py  quality_analytics_dal.py  vessel_planning_dal.py  yield_analytics_dal.py
apps/processorderhistory/backend/genie_assist/: router_genie.py
apps/processorderhistory/backend/manufacturing_analytics/: router_adherence.py  router_downtime.py  router_equipment_insights.py  router_equipment_insights2.py  router_oee.py  router_quality.py  router_yield.py
apps/processorderhistory/backend/order_execution/: router_day_view.py  router_me.py  router_order_detail.py  router_orders.py  router_pours.py
apps/processorderhistory/backend/processorderhistory_backend/: db.py  main.py  manifest.py  prefs_store.py
apps/processorderhistory/backend/production_planning/: router_planning.py  router_vessel_planning.py
apps/processorderhistory/backend/routers/: adherence_router.py  day_view_router.py  downtime_router.py  equipment_insights2_router.py  equipment_insights_router.py  genie_router.py  me_router.py  oee_router.py  order_detail_router.py  orders.py  planning_router.py  pours_router.py  quality_router.py  vessel_planning_router.py  yield_router.py
apps/processorderhistory/backend/schemas/: order_schemas.py
apps/processorderhistory/backend/tests/: conftest.py  test_adherence_analytics_dal.py  test_adherence_router.py  test_architecture_boundaries.py  test_day_view_dal.py  test_day_view_router.py  test_db.py  test_downtime_analytics_dal.py  test_downtime_router.py  test_equipment_domain.py  test_equipment_insights2_dal.py  test_equipment_insights_dal.py  test_genie_client.py  test_genie_router.py  test_lineside_monitor_router.py  test_main.py  test_manufacturing_analytics_application_queries.py  test_manufacturing_series_domain.py  test_me_router.py  test_oee_analytics_dal.py  test_oee_router.py  test_order_detail_dal.py  test_order_detail_router.py  test_order_execution_application_queries.py  test_order_execution_domain.py  test_order_schemas.py  test_orders_dal.py  test_orders_router.py  test_planning_dal.py  test_planning_domain.py  test_planning_router.py  test_plants_application.py  test_plants_router.py  test_pours_analytics_dal.py  test_pours_router.py  test_production_planning_application_queries.py  test_quality_analytics_dal.py  test_quality_router.py  test_vessel_planning_dal.py  test_vessel_planning_domain.py  (+3 more)
apps/spc/backend/: main.py  project.json  pyproject.toml  requirements.txt
apps/spc/backend/chart_config/: router.py
apps/spc/backend/dal/: spc_analysis_dal.py  spc_charts_dal.py  spc_metadata_dal.py  trace_dal.py
apps/spc/backend/process_control/: router_analysis.py  router_charts.py  router_metadata.py
apps/spc/backend/routers/: exclusions.py  export.py  (+5 more)
apps/template/backend/: project.json  pyproject.toml
apps/trace2/backend/: main.py  project.json  pyproject.toml
apps/warehouse360/backend/: main.py  project.json  pyproject.toml  requirements.txt
libs/shared-api/: README.md  project.json  pyproject.toml
libs/shared-api/tests/: test_app_runtime.py  test_framework.py  test_middleware.py  test_rate_limit.py  test_security.py
libs/shared-auth/: project.json  pyproject.toml
libs/shared-auth/tests/: test_identity.py  test_middleware.py
libs/shared-db/: CHANGELOG.md  project.json  pyproject.toml
libs/shared-db/tests/: test_audit.py  test_authorized_scope.py  test_executors.py  test_in_helper.py  test_query_builder.py  test_runtime.py
libs/shared-domain/: README.md  project.json  pyproject.toml
libs/shared-domain/tests/: test_models.py
libs/shared-manufacturing/: README.md  project.json  pyproject.toml
libs/shared-manufacturing/tests/: test_models.py
(+1814 files in other folders)
