[project]
name = "shared-api"
version = "0.1.2"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "shared-auth",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_api"]

[tool.interrogate]
# Docstring presence gate - set at the current floor as of 2026-05-08.
# See TODO.md for the ratchet commitment toward 80%+. Run locally with
# `uv run --with interrogate interrogate <package>` to see uncovered files.
fail-under = 79
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = false
omit-covered-files = true
verbose = 0
