[project]
name = "shared-db"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "databricks-sdk>=0.25",
  "databricks-sql-connector>=3.3",
  "cachetools>=5.3",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_db"]
