[project]
name = "shared-domain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_domain"]

[tool.interrogate]
# Docstring presence gate - set at the current floor as of 2026-05-08.
# See TODO.md for the ratchet commitment toward 80%+. Run locally with
# `uv run --with interrogate interrogate <package>` to see uncovered files.
fail-under = 93
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = false
omit-covered-files = true
verbose = 0
