[project]
name = "envmon-backend"
version = "0.1.5"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "cachetools>=5.3",
  "slowapi>=0.1.9",
  "databricks-sdk>=0.25",
  "databricks-sql-connector>=3.3",
  "shared-db",
  "shared-api",
  "shared-ddd", "shared-manufacturing",
  "shared-geo",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envmon_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --cov=envmon_backend --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=75"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["envmon_backend"]
omit = ["tests/*", "envmon_backend/__init__.py"]

[tool.interrogate]
# Docstring presence gate - set at the current floor as of 2026-05-08.
# See TODO.md for the ratchet commitment toward 80%+. Run locally with
# `uv run --with interrogate interrogate <package>` to see uncovered files.
fail-under = 68
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = false
omit-covered-files = true
verbose = 0
