[project]
name = "platform-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "cachetools>=5.3",
  "slowapi>=0.1.9",
  "databricks-sdk>=0.25",
  "databricks-sql-connector>=3.3",
  "PyJWT[crypto]>=2.8",
  "shared-api",
  "shared-auth",
  "connectedquality-backend",
  "processorderhistory-backend",
  "warehouse360-backend",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "backend/__init__.py"
"main.py" = "backend/main.py"
"routes" = "backend/routes"
"utils.py" = "backend/utils.py"
