[project]
name = "spc-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-dotenv>=1.0",
  "cachetools>=5.3",
  "pypika>=0.51",
  "openpyxl>=3.1",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "databricks-sql-connector>=4.0",
  "orjson>=3.9",
  "shared-db",
  "shared-api",
  "shared-geo",
  "shared-trace",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spc_backend"]
