[project]
name = "spc-backend"
version = "0.1.4"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-dotenv>=1.0",
  "cachetools>=5.3",
  "pypika>=0.51",
  "openpyxl>=3.1",
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.13",
  "databricks-sql-connector>=4.0",
  "orjson>=3.9",
  "shared-db",
  "shared-api",
  "shared-geo",
  "shared-trace",
  "shared-manufacturing",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spc_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --cov=spc_backend --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=75"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
  "integration: tests that exercise integration-style API paths or external-service boundaries",
]

[tool.coverage.run]
source = ["spc_backend"]
omit = ["tests/*", "spc_backend/__init__.py"]

[tool.interrogate]
# Docstring presence gate - set at the current floor as of 2026-05-08.
# See TODO.md for the ratchet commitment toward 80%+. Run locally with
# `uv run --with interrogate interrogate <package>` to see uncovered files.
fail-under = 40
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = false
omit-covered-files = true
verbose = 0
