[project]
name = "template-backend"
version = "0.1.0"
description = "Template Module backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2",
  "hypothesis>=6.100",
  "shared-api",
  "shared-auth",
  "shared-ddd", "shared-manufacturing",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
