[project]
name = "warehouse360-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "cachetools>=5.3",
  "slowapi>=0.1.9",
  "databricks-sdk>=0.25",
  "databricks-sql-connector>=3.3",
  "shared-domain",
  "shared-geo",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warehouse360_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --cov=warehouse360_backend --cov-report=term-missing --cov-report=xml --cov-fail-under=75"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["warehouse360_backend"]
omit = ["tests/*", "warehouse360_backend/__init__.py"]
