[project]
name = "warehouse360-backend"
version = "0.1.10"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "cachetools>=5.3",
  "slowapi>=0.1.9",
  "databricks-sdk>=0.25",
  "databricks-sql-connector>=3.3",
  "shared-ddd", "shared-manufacturing",
  "shared-geo",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warehouse360_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --cov=warehouse360_backend --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=72"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
  "integration: tests that exercise integration-style API paths or external-service boundaries",
]

[tool.coverage.run]
source = ["warehouse360_backend"]
omit = ["tests/*", "warehouse360_backend/__init__.py"]

[tool.interrogate]
# Docstring presence gate - set at the current floor as of 2026-05-08.
# See TODO.md for the ratchet commitment toward 80%+. Run locally with
# `uv run --with interrogate interrogate <package>` to see uncovered files.
fail-under = 78
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = false
omit-covered-files = true
verbose = 0
